[project]
name = "web-hw-11"
version = "0.1.0"
description = ""
authors = [
    {name = "Your-Natka",email = "140067844+Your-Natka@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi >=0.116.1,<0.117.0",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
